--- a/views/auth.erb
+++ b/views/auth.erb
@@ -2,6 +2,6 @@
 	<label for="username">Instapaper Username</label>
 	<input type="text" name="username" id="username" />
 	<label for="password">Instapaper Password</label>
-	<input type="text" name="password" id="password" />
+	<input type="password" name="password" id="password" />
 	<input type="submit" value="Test auth" />
 </form>
