--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<title>RSS to Instapaper</title>
+	<script src="/js/vendor/jquery.js"></script>
+	<script src="/js/vendor/underscore.js"></script>
+	<script src="/js/vendor/backbone.js"></script>
+	<script src="/js/RSSPaper.js"></script>
 </head>
 <body>
 	<%= yield %>
